--- a/cappuccino.html
+++ b/cappuccino.html
@@ -17,7 +17,7 @@
     <h1>Cappuccino</h1>
     <em><strong><p>Our cappuccino is a balanced mix of espresso, steamed milk, and a light foam, making it a customer favorite.</p></strong></em>
     <img src="cappuccino.jpeg" alt="Cappuccino" width="250" height="300"><br>
-    <a href="project.html"><button type="submit" class="btn">Back to Home</button></a><br>
+    <a href="index.html"><button type="submit" class="btn">Back to Home</button></a><br>
     <strong><p>You can also try this at your home</p></strong><br>
     <strong><p>press here for more information</p></strong>
     <a href="https://youtu.be/3zBcpK52ZSM?si=RjOj9wuPks0LpA91"><button type="submit" class="btn">Press Here</button></a>
