--- a/lattee.html
+++ b/lattee.html
@@ -17,7 +17,7 @@
     <h1>Latte</h1>
     <em><strong><p>A latte is a smooth, creamy coffee drink made with espresso and steamed milk, topped with a light layer of foam.</p></strong></em>
     <img src="lattee.jpeg" alt="lattee" width="250" height="300"><br>
-    <a href="project.html"><button type="submit" class="btn">Back to Home</button></a><br>
+    <a href="index.html"><button type="submit" class="btn">Back to Home</button></a><br>
     <strong><p>You can also try this at your home</p></strong><br>
     <strong><p>press here for more information</p></strong>
     <a href="https://youtu.be/0PN0MwTcbxI?si=ybzGaRcKAajIbrN6"><button type="submit" class="btn">Press Here</button></a>
