--- a/mocha.html
+++ b/mocha.html
@@ -17,7 +17,7 @@
     <h1>Mocha</h1>
     <em><strong><p>A mocha is a rich coffee drink combining espresso, steamed milk, and chocolate syrup, often topped with whipped cream.</p></strong></em>
     <img src="mocha.jpeg" alt="lattee" width="250" height="300"><br>
-    <a href="project.html"><button type="submit" class="btn">Back to Home</button></a><br>
+    <a href="index.html"><button type="submit" class="btn">Back to Home</button></a><br>
     <strong><p>You can also try this at your home</p></strong><br>
     <strong><p>press here for more information</p></strong>
     <a href="https://youtu.be/pUJH1sUfLWM?si=IYlb823sxaOSo0-T"><button type="submit" class="btn">Press Here</button></a>
