some mistake changes

--- a/espresso.html
+++ b/espresso.html
@@ -13,11 +13,11 @@
         }
     </style>
 </head>
-<body>
+<body align="center">
     <div id="coffee">
     <h1>Espresso</h1>
     <em><strong><p>Our rich and bold espresso shot is a delight for coffee enthusiasts. Made from premium beans, it has a deep, complex flavor.</p></strong></em>
-    <img src="espresso.jpeg" alt="Espresso Coffee" width="250" height="300"><br>
+    <img src="espresso.jpeg" alt="Espresso Coffee" width="450" height="300"><br>
     <a href="index.html"><button type="submit" class="btn">Back to Home</button></a><br>
     <strong><p>You can also try this at your home</p></strong><br>
     <strong><p>press here for more information</p></strong>
