--- a/lattee.html
+++ b/lattee.html
@@ -13,10 +13,10 @@
         }
     </style>
 </head>
-<body><div id="coffee">
+<body align="center"><div id="coffee">
     <h1>Latte</h1>
     <em><strong><p>A latte is a smooth, creamy coffee drink made with espresso and steamed milk, topped with a light layer of foam.</p></strong></em>
-    <img src="lattee.jpeg" alt="lattee" width="250" height="300"><br>
+    <img src="lattee.jpeg" alt="lattee" width="450" height="300"><br>
     <a href="index.html"><button type="submit" class="btn">Back to Home</button></a><br>
     <strong><p>You can also try this at your home</p></strong><br>
     <strong><p>press here for more information</p></strong>
