--- a/mocha.html
+++ b/mocha.html
@@ -13,10 +13,10 @@
         }
     </style>
 </head>
-<body><div id="coffee">
+<body align="center"><div id="coffee">
     <h1>Mocha</h1>
     <em><strong><p>A mocha is a rich coffee drink combining espresso, steamed milk, and chocolate syrup, often topped with whipped cream.</p></strong></em>
-    <img src="mocha.jpeg" alt="lattee" width="250" height="300"><br>
+    <img src="mocha.jpeg" alt="lattee" width="450" height="300"><br>
     <a href="index.html"><button type="submit" class="btn">Back to Home</button></a><br>
     <strong><p>You can also try this at your home</p></strong><br>
     <strong><p>press here for more information</p></strong>
