--- a/cappuccino.html
+++ b/cappuccino.html
@@ -13,10 +13,10 @@
         }
     </style>
 </head>
-<body><div id="coffee">
+<body align="center"><div id="coffee">
     <h1>Cappuccino</h1>
     <em><strong><p>Our cappuccino is a balanced mix of espresso, steamed milk, and a light foam, making it a customer favorite.</p></strong></em>
-    <img src="cappuccino.jpeg" alt="Cappuccino" width="250" height="300"><br>
+    <img src="cappuccino.jpeg" alt="Cappuccino" width="450" height="300"><br>
     <a href="index.html"><button type="submit" class="btn">Back to Home</button></a><br>
     <strong><p>You can also try this at your home</p></strong><br>
     <strong><p>press here for more information</p></strong>
