--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
             </div>
             <div class="menu-item">
                 <h3>Cappuccino</h3>
-                <p>Classic espresso with steamed milk and foam.</p>
+                <p>Classic Cappuccino with steamed milk and foam.</p>
                 <a href="cappuccino.html">
                     <img src="cappuccino.jpeg" alt="Cappuccino coffee" width="120" height="150">
                 </a><br>
@@ -75,7 +75,7 @@
             </div>
             <div class="menu-item">
                 <h3>Latte</h3>
-                <p>Espresso with steamed milk for a smooth taste.</p>
+                <p>Latte with steamed milk for a smooth taste.</p>
                 <a href="lattee.html">
                     <img src="lattee.jpeg" alt="Latte coffee" width="120" height="150">
                 </a><br>
@@ -83,7 +83,7 @@
             </div>
             <div class="menu-item">
                 <h3>Mocha</h3>
-                <p>Espresso mixed with chocolate and milk.</p>
+                <p>Mocha mixed with chocolate and milk.</p>
                 <a href="mocha.html">
                     <img src="mocha.jpeg" alt="Mocha coffee" width="120" height="150">
                 </a><br>
